--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title></title>
+        <title>JS Tests</title>
     </head>
 
     <body>
+       <h1>JS Tests</h1>
         <script src="script.js"></script>
     </body>
 </html>
